--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,7 +15,7 @@ body {
   height: 100%;
   min-height: 100vh;
   width: 100%;
-  position: fixed;
+  position: relative;
   top: 0;
   overflow-y: scroll;
 
